Fixed search text not visible on dark theme

--- a/public/style/scss/sidebar.scss
+++ b/public/style/scss/sidebar.scss
@@ -31,7 +31,7 @@ aside.sidebar {
         border-color: var(--border-color);
         border-width: 1.5px;
         border-radius: 10px;
-        color: var(--text-color);
+        color: black;
       }
 
       i {
